Fix publish post error: user publish spacing and can not publish

--- a/my-blog/src/components/BlogPost/BlogPost.module.css
+++ b/my-blog/src/components/BlogPost/BlogPost.module.css
@@ -44,6 +44,9 @@
   .postAction {
     display: inline-flex;
   }
+  .blog-post__content {
+    word-wrap: break-word;
+  }
   
   /* Responsive Design */
   @media (max-width: 768px) {
